deployment/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-write
  name: registry-write
spec:
  ports:
  - name: "http"
    port: 5000
    targetPort: 5000
  selector:
    app: registry-write
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-read
  name: registry-read
spec:
  ports:
  - name: "http"
    port: 5000
    targetPort: 5000
  selector:
    app: registry-read
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-router
  name: registry-router
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 50
  selector:
    app: registry-router
